@@ -1,6 +1,7 @@
 package us.dot.its.jpo.geojsonconverter.converter;
 
 import org.apache.kafka.streams.KafkaStreams;
+import org.apache.kafka.streams.Topology;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -11,12 +12,15 @@ import us.dot.its.jpo.geojsonconverter.GeoJsonConverterProperties;
 import us.dot.its.jpo.geojsonconverter.StreamsExceptionHandler;
 import us.dot.its.jpo.geojsonconverter.converter.map.MapTopology;
 import us.dot.its.jpo.geojsonconverter.converter.psm.PsmTopology;
+import us.dot.its.jpo.geojsonconverter.converter.rtcm.RTCMConverter;
+import us.dot.its.jpo.geojsonconverter.converter.rtcm.RTCMTopology;
 import us.dot.its.jpo.geojsonconverter.converter.spat.SpatTopology;
 import us.dot.its.jpo.geojsonconverter.converter.bsm.BsmTopology;
-import us.dot.its.jpo.geojsonconverter.validator.BsmJsonValidator;
-import us.dot.its.jpo.geojsonconverter.validator.MapJsonValidator;
-import us.dot.its.jpo.geojsonconverter.validator.PsmJsonValidator;
-import us.dot.its.jpo.geojsonconverter.validator.SpatJsonValidator;
+import us.dot.its.jpo.geojsonconverter.converter.srm.SrmConverter;
+import us.dot.its.jpo.geojsonconverter.converter.srm.SrmTopology;
+import us.dot.its.jpo.geojsonconverter.converter.ssm.SsmConverter;
+import us.dot.its.jpo.geojsonconverter.converter.ssm.SsmTopology;
+import us.dot.its.jpo.geojsonconverter.validator.*;
 
 /**
  * Launches JsonFromJsonConverter service
@@ -29,7 +33,10 @@ public class JsonConverterServiceController {
 
     @Autowired
     public JsonConverterServiceController(GeoJsonConverterProperties geojsonProps, MapJsonValidator mapJsonValidator,
-            SpatJsonValidator spatJsonValidator, BsmJsonValidator bsmJsonValidator, PsmJsonValidator psmJsonValidator) {
+                                          SpatJsonValidator spatJsonValidator, BsmJsonValidator bsmJsonValidator, PsmJsonValidator psmJsonValidator,
+                                          RTCMJsonValidator rtcmJsonValidator, RTCMConverter rtcmConverter,
+                                          SrmJsonValidator srmJsonValidator, SrmConverter srmConverter,
+                                          SsmJsonValidator ssmJsonValidator, SsmConverter ssmConverter) {
         super();
 
         try {
@@ -43,7 +50,7 @@ public class JsonConverterServiceController {
                     mapJsonValidator, geojsonProps.getGeometryOutputMode());
             var mapStreams = new KafkaStreams(mapTopology, geojsonProps.createStreamProperties("processedmapjson"));
             mapStreams.setUncaughtExceptionHandler(new StreamsExceptionHandler("MapStream"));
-            Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+            Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().unstarted(() -> {
                 try {
                     // Workaround to close streams in a finally block to satisfy sonar
                 } finally {
@@ -59,7 +66,7 @@ public class JsonConverterServiceController {
                     geojsonProps.getKafkaTopicSpatGeoJson(), spatJsonValidator);
             var spatStreams = new KafkaStreams(spatTopology, geojsonProps.createStreamProperties("processedspatjson"));
             spatStreams.setUncaughtExceptionHandler(new StreamsExceptionHandler("SpatStream"));
-            Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+            Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().unstarted(() -> {
                 try {
                     // Workaround to close streams in a finally block to satisfy sonar
                 } finally {
@@ -75,7 +82,7 @@ public class JsonConverterServiceController {
                     geojsonProps.getKafkaTopicProcessedBsm(), bsmJsonValidator);
             var bsmStreams = new KafkaStreams(bsmTopology, geojsonProps.createStreamProperties("processedbsmjson"));
             bsmStreams.setUncaughtExceptionHandler(new StreamsExceptionHandler("BsmStream"));
-            Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+            Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().unstarted(() -> {
                 try {
                     // Workaround to close streams in a finally block to satisfy sonar
                 } finally {
@@ -91,7 +98,7 @@ public class JsonConverterServiceController {
                     geojsonProps.getKafkaTopicProcessedPsm(), psmJsonValidator);
             var psmStreams = new KafkaStreams(psmTopology, geojsonProps.createStreamProperties("processedpsmjson"));
             psmStreams.setUncaughtExceptionHandler(new StreamsExceptionHandler("PsmStream"));
-            Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+            Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().unstarted(() -> {
                 try {
                     // Workaround to close streams in a finally block to satisfy sonar
                 } finally {
@@ -99,6 +106,61 @@ public class JsonConverterServiceController {
                 }
             }));
             psmStreams.start();
+
+            // RTCM
+            logger.info("Creating the ProcessedRTCM Kafka Streams topology");
+            Topology rtcmTopology = RTCMTopology.build(
+                    geojsonProps.getKafkaTopicOdeRtcmJson(),
+                    geojsonProps.getKafkaTopicProcessedRtcm(),
+                    rtcmJsonValidator,
+                    rtcmConverter);
+            final var rtcmStreams = new KafkaStreams(rtcmTopology,
+                    geojsonProps.createStreamProperties("processedrcmjson"));
+            rtcmStreams.setUncaughtExceptionHandler(new StreamsExceptionHandler("RTCMStream"));
+            Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().unstarted(() -> {
+                try {
+                    // Workaround to close streams in a finally block to satisfy sonar
+                } finally {
+                    rtcmStreams.close();
+                }
+            }));
+            rtcmStreams.start();
+
+            // SRM
+            logger.info("Creating the ProcessedSrm Kafka Streams topology");
+            Topology srmTopology = SrmTopology.build(
+                    geojsonProps.getKafkaTopicOdeSrmJson(),
+                    geojsonProps.getKafkaTopicProcessedSrm(),
+                    srmJsonValidator,
+                    srmConverter);
+            final var srmStreams = new KafkaStreams(srmTopology,
+                    geojsonProps.createStreamProperties("processedsrmjson"));
+            Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().unstarted(() -> {
+                try {
+                    // Workaround to close streams in a finally block to satisfy sonar
+                } finally {
+                    srmStreams.close();
+                }
+            }));
+            srmStreams.start();
+
+            // SSM
+            logger.info("Creating the ProcessedSsm Kafka Streams topology");
+            Topology ssmTopology = SsmTopology.build(
+                    geojsonProps.getKafkaTopicOdeSsmJson(),
+                    geojsonProps.getKafkaTopicProcessedSsm(),
+                    ssmJsonValidator,
+                    ssmConverter);
+            final var ssmStreams = new KafkaStreams(ssmTopology,
+                    geojsonProps.createStreamProperties("processedssmjson"));
+            Runtime.getRuntime().addShutdownHook(Thread.ofVirtual().unstarted(() -> {
+                try {
+                    // Workaround to close streams in a finally block to satisfy sonar
+                } finally {
+                    ssmStreams.close();
+                }
+            }));
+            ssmStreams.start();
 
             logger.info("All geoJSON conversion services started!");
         } catch (Exception e) {
